--- a/index.html
+++ b/index.html
@@ -186,44 +186,42 @@
         gap: 1rem;
         padding: 1rem 0.5rem;
       }
-      .header-left {
-        width: 100%;
-        justify-content: center;
+
+      .header-center img {
+        width: 60px;
+        height: 60px;
       }
-      .event-banner {
-        position: static;
-        margin: 0.5rem auto;
-        width: fit-content;
+
+      .header-left img {
+        width: 35px;
+        height: 35px;
       }
-      .couple-input {
-        flex-direction: column;
-        align-items: center;
+
+      h2 {
+        font-size: 1.5rem;
       }
-      .lover {
-        width: 100%;
-        justify-content: center;
-      }
-      input {
-        max-width: 120px;
-      }
-      .action-buttons {
-        flex-wrap: wrap;
-        gap: 10px;
-      }
+
       .btn {
-        width: 100%;
-        margin: 0;
+        font-size: 1rem;
+        padding: 12px 20px;
       }
-      section {
-        padding: 1rem;
+
+      #fortuneText, #coupleResult {
+        font-size: 1.2rem;
       }
-      #slotReels {
-        padding: 20px 15px;
-        gap: 10px;
+
+      input {
+        max-width: 100%;
+        font-size: 1rem;
       }
-      .reel {
-        width: 90px;
-        height: 110px;
+
+      #spinButton {
+        font-size: 1.2rem;
+        padding: 15px 30px;
+      }
+
+      #slotResult {
+        font-size: 1.5rem;
       }
     }
     /* 작은 모바일 화면 */
@@ -232,16 +230,36 @@
         width: 50px;
         height: 50px;
       }
+
       .header-left img {
         width: 30px;
         height: 30px;
       }
+
       h2 {
-        font-size: 1.1rem;
+        font-size: 1.3rem;
       }
+
       .btn {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         padding: 10px 15px;
+      }
+
+      #fortuneText, #coupleResult {
+        font-size: 1rem;
+      }
+
+      input {
+        font-size: 0.9rem;
+      }
+
+      #spinButton {
+        font-size: 1rem;
+        padding: 12px 25px;
+      }
+
+      #slotResult {
+        font-size: 1.3rem;
       }
     }
 
